# cargo-mextk

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: build.rs  error.rs  iso.rs  lib.rs  main.rs  manifest.rs  new.rs  paths.rs  run.rs
src/dolphin_template/Config/: Dolphin.ini  FreeLookController.ini  GCKeyNew.ini  GCPadNew.ini  Logger.ini  Qt.ini  WiimoteNew.ini
src/install/: additions.rs  mod.rs  patch_dol.rs  patches.rs
src/mex-additions/files/audio/us/: null.ssm
src/mex-patches/files/: IfAll.usd  MnSlChr.usd  MnSlMap.usd
src/mex-patches/files/audio/us/: 1padv.ssm  1pend.ssm  bigblue.ssm  captain.ssm  castle.ssm  clink.ssm  corneria.ssm  dk.ssm  drmario.ssm  emblem.ssm  end.ssm  ending.ssm  falco.ssm  fourside.ssm  fox.ssm  ganon.ssm  garden.ssm  gkoopa.ssm  greatbay.ssm  greens.ssm  gw.ssm  ice.ssm  kirby.ssm  kirbytm.ssm  klaid.ssm  kongo.ssm  koopa.ssm  last.ssm  link.ssm  luigi.ssm  main.ssm  mario.ssm  mars.ssm  mewtwo.ssm  mhands.ssm  mutecity.ssm  ness.ssm  nr_1p.ssm  nr_name.ssm  nr_select.ssm  (+16 more)
src/mex-patches/sys/: main.dol
src/template/: Mextk.toml
template/: Cargo.toml
template/.cargo/: config
template/src/: lib.rs
wix/: License.rtf  main.wxs
