[package]
name = "cargo-mextk"
version = "0.3.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"
description = "A cargo subcommand for build and working with melee mods"
license = "MIT"
repository = "https://github.com/jam1garner/cargo-mextk"
documentation = "https://docs.rs/cargo-mextk"

[dependencies]
thiserror = "1"
structopt = "0.3"
include_dir = "0.6"
cargo_metadata = "0.9.1"
owo-colors = { version = "1.3", features = ["tty"] }
dirs-next = "2"
gc-gcm = "0.10"
rayon = "1.5"
memmap = "0.7"
humansize = "1.1"
cli-table = "0.4"
seahash = "4.1.0"
pathdiff = "0.2.0"
ureq = "2.0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
bsdiff = "0.1.3"
xdelta3 = "0.1"
zip = "0.5.9"
